imported fixed upload version (by Arthur) from rop
svn changeset:182 branch:toolkit

--- a/WebContent/themes/default/theme.css
+++ b/WebContent/themes/default/theme.css
@@ -415,4 +415,11 @@ IMG.overlay {
 .table .actions .over {
 	background-color: Highlight;
 }
-
+.upload-iframe {
+	width: 450px;
+	height: 30px;
+	border: none;
+	margin: 0px;
+	padding: 0px;
+	background: transparent;
+}
