--- a/WebContent/WEB-INF/lib/themes/base/css/base-uidl.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-uidl.css
@@ -35,9 +35,9 @@ div#ajax-wait {
 html {
     background-color: ThreeDFace;
 }
-input, select, button,html {
+input, select, button, html {
     font-family: Tahoma, sans-serif; 
-    font-size: 1em;
+    font-size: 8pt;
     font-weight: normal;
 }
 
