--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -289,19 +289,11 @@ IMG.overlay {
 	width: 2px;
 	cursor:w-resize;
 }
-.table .hin .tableheader IMG.sort {
-	Xposition: absolute;
-	Xmargin-top: 0.5em;
-	Xmargin-left: 2px;
-	width: 9px;
-	height: 5px;
-	background-repeat: no-repeat;
-}
-.table .hin .tableheader IMG.sortasc {
-	background-image: url('../img/table/asc.gif');
-}
-.table .hin .tableheader IMG.sortdesc {
-	background-image: url('../img/table/desc.gif');
+.table .hin .tableheader img.sort {
+	float:right;
+	width:11px;
+	height:11px;
+	overflow:hidden;
 }
 .table .hin .tableheader {
 	border-left: 1px solid ButtonHighlight;
