--- a/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
@@ -1,4 +1,6 @@
 
+/* Background */
+
 html {
     background-color: #e7eaf0; 
     background-image: url(../img/common/application_bg.png);
@@ -6,25 +8,13 @@ html {
 	background-position: 0 0;
 }
 
+/* Fonts */
+
 input, select, button, html {
     font-family: Tahoma, Helvetica, Arial, Tahoma, Verdana, sans-serif; 
     font-size: 8pt;
     font-weight: normal;
     color: #2c3437;
-}
-
-
-div#ajax-wait {
-	top:1px;
-	right:1px;
-	cursor:wait;
-	z-index:10000;
-	background-color: #ffff99;
-	display:none;
-	position:absolute;
-	border: 1px solid #cccc00;
-	padding: 3px;
-	font-weight: bold;
 }
 
 
@@ -37,10 +27,8 @@ div.panel div.panelborder .panelcaption {
 	padding: 5px;
 	spacing: 0;
 	font-weight: bold;
+	border: 1px solid #a3b5ce;
 	border-bottom: 0;
-	border-top:					solid 1px #d8dbe3;
-	border-right:				solid 1px #aaacbc;
-	border-left:				solid 1px #d3d4dc;
 }
 div.panel div.panelborder {
 	border: 0;
@@ -53,4 +41,60 @@ div.panel div.panelborder div.content {
 	border-left:				solid 2px #d3d4dc;
 	background-color: white;
 }
+
+/* Tabsheet */
+
+/*
+Tabs background:			height 30px, #d4e7fe	img/tabsheet/header_bg.png			(1 x 30)
+Normal tab:
+-height						22px
+-border						solid 1px #85a2c5
+-background					#b4d3f0	img/tabsheet/tab_bg.png				(1 x 22)
+Hover tab:
+-height						22px
+-border						solid 1px #85a2c5
+-background					#e5effa	img/tabsheet/tab_hover_bg.png		  -"-
+Open tab:
+-height						22px
+-border						solid 1px #85a2c5
+-background					#d4e7fe	img/tabsheet/tab_open_bg.png		  -"-
+*/
+
+div.tabsheet table.tabs {
+	border-spacing: 2px 0;
+	position: relative;
+	top: 1px;
+}
+
+div.tabsheet table.tabs td {
+	height: 14px;
+	background-color: #b4d3f0;
+	background-image: url(../img/tabsheet/tab_white_bg.png);
+	border: solid 1px #85a2c5;
+	border-bottom: 1px solid white;
+	color: #094582;
+	padding: 4px;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+	
+div.tabsheet table.tabs td.clickable {
+	background-color: #b4d3f0;
+	border-bottom: solid 1px #85a2c5;
+	background-image: url(../img/tabsheet/tab_bg.png);
+}
+
+div.tabsheet table.tabs td.over {
+	border: solid 1px #85a2c5;
+	border-bottom: solid 1px #85a2c5;
+	background-image: url(../img/tabsheet/tab_hover_bg.png);
+}
+	
+div.tabsheet div.tab-content {
+	background-color: white;
+	border: none;
+	border: solid 1px #85a2c5;
+	padding: 7px;
+}
+
 
